@startuml
title Class view — Domain notification production

skinparam backgroundColor #FFFDF7
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontColor #18352F
skinparam ArrowColor #2F6F67
skinparam packageBorderColor #477B73
skinparam packageBackgroundColor #EEF6F3
skinparam rectangleBorderColor #477B73
skinparam rectangleBackgroundColor #FFFFFF
skinparam componentBorderColor #8A5A1F
skinparam componentBackgroundColor #FFF6E6
skinparam databaseBorderColor #4E668E
skinparam databaseBackgroundColor #EEF3FB
skinparam actorBorderColor #18352F
skinparam actorBackgroundColor #FFFFFF
skinparam classBorderColor #477B73
skinparam classBackgroundColor #FFFFFF
skinparam sequenceBoxBorderColor #477B73
skinparam sequenceBoxBackgroundColor #F4F8F6
skinparam ParticipantBorderColor #477B73
skinparam ParticipantBackgroundColor #FFFFFF
skinparam BoxPadding 10
hide stereotype

left to right direction
package "Reconciliation Through Relationships application" {
  package "Domain notification production structure" {
    class "NotificationProducer" as type0 {
      +produceAfterDomainWrite()
    }
    
    entity "Notification" as type1 {
      +user_id
      +type
      +title
      +body
      +data
    }
    
    entity "Connection" as type2 {
      +id
      +participants
    }
    
    entity "Message" as type3 {
      +id
      +connection_id
      +content
    }
    
    entity "Meeting" as type4 {
      +id
      +connection_id
      +topic
    }
  }
}
type2 --> type0 : triggers
type3 --> type0 : triggers
type4 --> type0 : triggers
type0 --> type1 : creates
legend bottom
  Class = implementation component or value shape
  Interface = public TypeScript contract
  Entity = persisted or domain data record
endlegend
@enduml
